--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolioo</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <div>
         <h2>Hello Ahmed Salah</h2>
     </div>
+
+
+
+    <script src="js/main.js"></script>
 </body>
 </html>
