--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <div>
-        <h2>Hello Ahmed Salah</h2>
-    </div>
+    <header>
+        
+    </header>
 
 
 
