--- a/index.html
+++ b/index.html
@@ -9,11 +9,24 @@
 </head>
 <body>
     <header>
-        
+        <div class="logo">
+            <img src="images/avatar.png" alt="">
+        </div>
+        <div class="menu-toggler">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <ul class="main-menu">
+            <li><a href="#">Profile</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Skills</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
     </header>
 
 
-
+    <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
