--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+    <a href="#" class="totop">
+        Top
+    </a>
     <header>
         <div class="logo">
             <img src="images/avatar.png" alt="">
@@ -18,12 +21,28 @@
             <div></div>
         </div>
         <ul class="main-menu">
-            <li><a href="#">Profile</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Skills</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#profile">Profile</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
+        <div class="intro-text">
+            <h1>Eng. Ahmed Salah</h1>
+            <h2>Full Stack Developer</h2>
+        </div>
     </header>
+    <section id="profile">
+        Profile
+    </section>
+    <section id="portfolio">
+        Portfolio
+    </section>
+    <section id="skills">
+        Skills
+    </section>
+    <section id="contact">
+        Contact
+    </section>
 
 
     <script src="js/jquery-3.4.1.min.js"></script>
